[package]
name = "zentinel-agent-ip-reputation"
version = "0.2.0"
edition = "2021"
authors = ["Zentinel Core Team"]
description = "IP Reputation agent for Zentinel - check client IPs against threat intelligence and blocklists"
license = "MIT"
repository = "https://github.com/zentinelproxy/zentinel-agent-ip-reputation"
keywords = ["zentinel", "ip-reputation", "threat-intelligence", "security", "blocklist"]
categories = ["network-programming", "web-programming"]

[dependencies]
# Using local path for development until 0.2 is published to crates.io
zentinel-agent-sdk = { path = "../zentinel-agent-rust-sdk", features = ["v2"] }
# Direct access to protocol types for metrics
zentinel-agent-protocol = { version = "0.5", git = "https://github.com/zentinelproxy/zentinel.git", package = "zentinel-agent-protocol" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "signal"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ipnet = "2"
regex = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
